LALR properly